fix toTop on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -416,8 +416,8 @@ p {
     padding: 1rem;
   }
   #toTop {
-    bottom: 1%;
-    right: 1%;
+    bottom: 2%;
+    right: 2%;
     padding: 10px;
     border-radius: 5px;
   }
